--- a/.config/docker/php/Dockerfile (before AI help LOL)
+++ b/.config/docker/php/Dockerfile (before AI help LOL)
@@ -1,7 +1,7 @@
 FROM php:8-fpm-alpine
 
-ARG UID
-ARG GID
+ARG UID=1000
+ARG GID=1000
 
 ENV UID=${UID}
 ENV GID=${GID}
@@ -28,7 +28,7 @@ RUN mkdir -p /usr/src/php/ext/redis \
     && curl -L https://github.com/phpredis/phpredis/archive/5.3.4.tar.gz | tar xvz -C /usr/src/php/ext/redis --strip 1 \
     && echo 'redis' >> /usr/src/php-available-exts \
     && docker-php-ext-install redis
-    
+
 USER laravel
 
 CMD ["php-fpm", "-y", "/usr/local/etc/php-fpm.conf", "-R"]
